--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-.trace.log*
-.expection.*
-*.log
-package/BEAR/Framework/src/BEAR/Framework/tmp/*
 templates_c
 vendor
 tmp
 log
 apps/sandbox/build
+build
