--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="Ray.Di" default="build">
+<project name="BEAR.Sunday" default="build">
+    <target name="composer" description="Installing dependencies">
+        <exec executable="composer.phar" failonerror="true">
+            <arg value="install" />
+        </exec>
+    </target>
     <target name="build"
-            depends="prepare,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpunit,phpcb,phpdoc,apigen"/>
+            depends="composer,prepare,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpunit,phpcb,phpdoc,apigen"/>
 
     <target name="build-parallel"
-            depends="prepare,lint,tools-parallel,phpunit,phpcb"/>
+            depends="composer,prepare,lint,tools-parallel,phpunit,phpcb"/>
 
     <target name="tools-parallel" description="Run tools in parallel">
         <parallel threadCount="2">
@@ -77,7 +82,7 @@
         <exec executable="phpmd">
             <arg path="${basedir}/src" />
             <arg value="text" />
-            <arg value="${basedir}/phpmd.xml" />
+            <arg value="${basedir}/cs/phpmd/phpmd.xml" />
         </exec>
     </target>
 
@@ -87,14 +92,15 @@
             <arg value="xml" />
             <arg value="${basedir}/phpmd.xml" />
             <arg value="--reportfile" />
-            <arg value="${basedir}/build/logs/pmd.xml" />
+            <arg value="${basedir}/cs/phpmd/phpmd.xml" />
         </exec>
     </target>
 
     <target name="phpcs"
             description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
         <exec executable="phpcs">
-            <arg value="--standard=${basedir}/build/phpcs.xml" />
+            <arg value="--standard=${basedir}/cs/ruleset.xml" />
+            <arg value="--warning-severity=0" />
             <arg path="${basedir}/src" />
         </exec>
     </target>
