--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ before_script:
  - pear install pear.phpunit.de/DbUnit
  - wget http://getcomposer.org/composer.phar
  - php composer.phar update
-script: phpunit --coverage-text
+script:
+ - phpunit --coverage-text
+ - output=$(php php-cs-fixer.phar fix -v --dry-run --level=psr2 src); if [[ $output ]]; then while read -r line; do echo -e "\e[00;31m$line\e[00m"; done <<< "$output"; false; fi;
