--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
         "ext-apc"                : "*",
         "ext-curl"               : "*",
         "ray/aop"                : ">=1.0.0-beta2",
-        "ray/di"                 : ">=1.0.0-beta2",
+        "ray/di"                 : ">=1.0.0-beta3",
         "bear/resource"          : ">=0.5.1",
         "vdump/vdump"            : "*",
         "printo/printo"          : "*",
-        "aura/di"                : "dev-master",
-        "aura/router"            : "dev-master",
-        "aura/signal"            : "dev-master",
-        "aura/web"               : "dev-master",
+        "aura/di"                : "1.0.*",
+        "aura/router"            : "1.0.*",
+        "aura/signal"            : "1.0.*",
+        "aura/web"               : "1.0.*",
         "doctrine/common"        : "2.3.*-dev",
         "doctrine/dbal"          : "2.3.*-dev",
         "facebook/xhprof"        : "0.9.*",
