--- a/composer.json
+++ b/composer.json
@@ -26,109 +26,18 @@
         "php"                    : ">=5.4.0",
         "ext-apc"                : "*",
         "ext-curl"               : "*",
-        "ray/aop"                : ">=1.0.0-beta2",
-        "ray/di"                 : ">=1.0.0-beta3",
-        "bear/resource"          : ">=0.5.1",
-        "vdump/vdump"            : "*",
-        "printo/printo"          : "*",
         "aura/di"                : "1.0.*",
-        "aura/router"            : "1.0.*",
         "aura/signal"            : "1.0.*",
-        "aura/web"               : "1.0.*",
-        "doctrine/common"        : "2.3.*-dev",
-        "doctrine/dbal"          : "2.3.*-dev",
-        "facebook/xhprof"        : "0.9.*",
+        "ray/di"                 : ">=1.0.0-beta3",
+        "ray/aop"                : ">=1.0.0-beta2",
+        "bear/resource"          : ">=0.5.1",
         "guzzle/guzzle"          : "2.7.*",
-        "pagerfanta/pagerfanta"  : "dev-master",
-        "smarty/smarty"          : "3.1.*",
-        "symfony/console"        : "2.0.*",
-        "symfony/http-foundation": "2.0.*",
-        "firephp/firephp-core"   : "dev-master",
-        "twitter/bootstrap"      : "dev-master",
-        "nocarrier/hal"          : "dev-master",
-        "zendframework/zend-log" : "2.0.*"
+        "nocarrier/hal"          : "dev-master"
     },
     "autoload": {
         "psr-0": {
             "BEAR\\Sunday": "src/"
         }
     },
-    "minimum-stability": "dev",
-    "require-dev": {
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://packages.zendframework.com/"
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "crodas/haanga",
-                "version": "1.0.4",
-                "dist": {
-                    "url": "https://github.com/crodas/Haanga/zipball/master",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/crodas/Haanga.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
-            "type":"package",
-            "package": {
-                "name": "vdump/vdump",
-                "version": "0.1.0",
-                "target-dir": "vdump",
-                "dist": {
-                    "url": "https://github.com/koriym/vdump/zipball/master",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/koriym/vdump.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "facebook/xhprof",
-                "version": "0.9.2",
-                "dist": {
-                    "url": "https://github.com/facebook/xhprof/zipball/master",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "https://github.com/facebook/xhprof.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
-        },
-        {
-           "type": "package",
-           "package": {
-               "version": "master",
-               "name": "twitter/bootstrap",
-               "source": {
-                   "url": "https://github.com/twitter/bootstrap.git",
-                   "type": "git",
-                   "reference": "master"
-               },
-               "dist": {
-                   "url": "https://github.com/twitter/bootstrap/zipball/master",
-                   "type": "zip"
-               }
-           }
-       },
-       {
-            "type": "composer",
-            "url": "http://packages.zendframework.com/"
-       }
-    ]
+    "minimum-stability": "dev"
 }
