--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "aura/signal"            : "1.0.*",
         "ray/di"                 : ">=1.0.0-beta3",
         "ray/aop"                : ">=1.0.0-beta2",
-        "bear/resource"          : ">=0.5.1",
+        "bear/resource"          : "0.6.*",
         "guzzle/guzzle"          : "3.0.*",
         "nocarrier/hal"          : "dev-master"
     },
