--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "ext-curl"               : "*",
         "aura/di"                : "1.0.*",
         "aura/signal"            : "1.0.*",
-        "ray/di"                 : ">=1.0.0-beta3",
-        "ray/aop"                : ">=1.0.0-beta2",
+        "ray/di"                 : "1.0.*",
+        "ray/aop"                : "1.0.*",
         "bear/resource"          : "0.7.*",
         "guzzle/guzzle"          : "3.3.*",
         "nocarrier/hal"          : "dev-master"
