--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
  - 5.4
 before_script:
  - wget http://cs.sensiolabs.org/get/php-cs-fixer.phar
- - php composer.phar install
+ - composer install
 script:
  - phpunit --coverage-text
  - output=$(php php-cs-fixer.phar fix -v --dry-run --level=psr2 src); if [[ $output ]]; then while read -r line; do echo -e "\e[00;31m$line\e[00m"; done <<< "$output"; false; fi;
