--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,8 @@
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
-        "ray/di": "1.0.*@dev",
-        "ray/aop": "1.0.*@dev",
         "bear/resource": "*",
-        "nocarrier/hal": "dev-master@dev"
+        "nocarrier/hal": "0.9.*"
     },
     "autoload": {
         "psr-0": {
