--- a/src/BEAR/Sunday/Extension/Application/composer.json
+++ b/src/BEAR/Sunday/Extension/Application/composer.json
@@ -1,8 +1,9 @@
 {
-    "name": "bear/application",
+    "name": "bear/ext-application",
     "description": "BEAR.Sunday application extension",
     "keywords": [
-        "BEAR.Sunday",
+        "BEAR.Sunday extension",
+        "interface",
         "application"
     ],
     "license": "BSD-3-Clause",
@@ -14,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "bear/application" : "0.7.*"
     },
     "autoload": {
         "psr-0": { "BEAR\\Sunday\\Extension\\Application\\": "" }
