--- a/src/BEAR/Sunday/Extension/TemplateEngine/composer.json
+++ b/src/BEAR/Sunday/Extension/TemplateEngine/composer.json
@@ -1,8 +1,9 @@
 {
-    "name": "bear/template-engine",
+    "name": "bear/ext-template-engine",
     "description": "BEAR.Sunday template engine extension",
     "keywords": [
-        "BEAR.Sunday",
+        "BEAR.Sunday extension",
+        "interface",
         "template engine"
     ],
     "license": "BSD-3-Clause",
@@ -14,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "bear/template-engine" : "0.7.*"
     },
     "autoload": {
         "psr-0": { "BEAR\\Sunday\\Extension\\TemplateEngine\\": "" }
