--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: BEAR.Sunday
 safe: true
 lsi: false
 site:
-  url: http://localhost:4000
+  url: mackstar.github.io/BEAR.Sunday
 markdown: redcarpet
 redcarpet:
   extensions: ["autolink", "no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "tables"]
