--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": ">=5.4.0",
         "bear/resource": "dev-develop",
         "ray/di": "dev-develop",
-        "ray/aop": "dev-develop"
+        "ray/aop": "dev-develop",
+        "aura/web": "*"
     },
     "autoload": {
         "psr-0": {
