--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "bear/resource": "dev-develop"
+        "bear/resource": "dev-develop",
+        "ray/di": "dev-develop",
+        "ray/aop": "dev-develop",
+        "psr/log": "1.*"
     },
     "autoload": {
         "psr-0": {
