--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "bear/resource": "dev-develop",
-        "ray/di": "dev-develop",
-        "ray/aop": "dev-develop",
+        "bear/resource": "0.*",
         "psr/log": "1.*"
     },
     "autoload": {
