--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "bear/resource": "0.*",
+        "bear/resource": "dev-develop",
         "psr/log": "1.*"
     },
     "autoload": {
