--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
-language: php
 php:
- - 5.4
- - 5.5
- - 5.6  
-before_script:
+  - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
+
+before_install:
+ - composer self-update
+ - composer install
  - wget http://cs.sensiolabs.org/get/php-cs-fixer.phar
- - composer install --dev
+ - wget https://scrutinizer-ci.com/ocular.phar
+
 script:
- - phpunit --coverage-text
- - output=$(php php-cs-fixer.phar fix -v --dry-run --level=psr2 --fixers=-psr0 src); if [[ $output ]]; then while read -r line; do echo -e "\e[00;31m$line\e[00m"; done <<< "$output"; false; fi;
+ - phpunit --coverage-text --coverage-clover=coverage.clover
+ - output=$(php php-cs-fixer.phar fix -v --dry-run --level=psr2 src); if [[ $output ]]; then while read -r line; do echo -e "\e[00;31m$line\e[00m"; done <<< "$output"; false; fi;
+
+after_script:
+ - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
