--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,17 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "bear/resource": "dev-develop",
-        "psr/log": "1.*"
+        "bear/resource": "~0.11",
+        "psr/log": "~1.0"
     },
     "autoload": {
         "psr-4": {
             "BEAR\\Sunday\\": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.10.x-dev"
         }
     }
 }
