--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,17 @@
-imports:
-    - php
 filter:
-    paths: [src/*]
+    paths: ["src/*"]
 tools:
     external_code_coverage: true
+    php_code_coverage: true
+    php_mess_detector: true
+    php_pdepend: true
+    php_analyzer: true
+    php_cpd: true
+    php_mess_detector:
+        enabled: true
+        config:
+            ruleset: ./phpmd.xml
+    php_code_sniffer:
+        enabled: true
+        config:
+            ruleset: ./phpcs.xml
