--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,35 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<phpunit bootstrap="tests/bootstrap.php">
+    <testsuites>
+        <testsuite>
+            <directory suffix="Test.php">tests</directory>
+        </testsuite>
+    </testsuites>
 
-<phpunit bootstrap="tests/bootstrap.php"
-         backupGlobals="false"
-         backupStaticAttributes="false"
-         strict="true"
-         colors="true"
-         timeoutForSmallTests="20"
-		 stopOnError="false"
-		 stopOnFailure="false"
-         verbose="true">
-  <testsuites>
-    <testsuite name="BEAR.Sunday">
-      <directory suffix="Test.php">tests</directory>
-    </testsuite>
-  </testsuites>
-
-  <logging>
-    <log type="coverage-html" target="build/coverage" title="BEAR.Sunday"
-         charset="UTF-8" yui="true" highlight="true"
-         lowUpperBound="35" highLowerBound="70"/>
-    <log type="coverage-clover" target="build/logs/clover.xml"/>
-    <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
-  </logging>
+    <logging>
+        <log type="coverage-html" target="build/coverage"/>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
+    </logging>
 
     <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
+        <whitelist>
             <directory suffix=".php">src</directory>
-            <exclude>
-                <file>src/Module/Cache/CacheProvider.php</file>
-                <directory>src/Inject</directory>
-            </exclude>
         </whitelist>
     </filter>
+    <php>
+        <ini name="xhprof.output_dir" value="./tests/tmp"/>
+        <ini name="error_log" value="./tests/tmp/error.log"/>
+        <ini name="xdebug.max_nesting_level" value="500"/>
+    </php>
 </phpunit>
